# nevo

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENCE  event.py  graphics.py  main.py  mind.py  world.py
animals/: Cargo.toml
animals/src/: animal.rs  app.rs  main.rs  world.rs
bacteria/: Cargo.toml
bacteria/src/: app.rs  bacteria.rs  main.rs  medium.rs
cells/: Cargo.toml
cells/src/: app.rs  cell.rs  main.rs  medium.rs
examples/: gui.rs
nevo/: Cargo.toml
nevo/src/: lib.rs
nevo_core/: Cargo.toml
nevo_core/src/: lib.rs
nevo_core/src/neural/: mod.rs  recurrent.rs
nevo_gui/: Cargo.toml
nevo_gui/src/: lib.rs
nevo_nn/: Cargo.toml
nevo_nn/src/: lib.rs  recurrent.rs
scripts/: build.sh
source/: entity.hpp  event.hpp  main.cpp  mind.hpp  network.hpp  nn.hpp  slice.hpp  vector.hpp  world.hpp
source/graphics/: graphics.hpp  item.hpp  myscene.hpp  scene.hpp  sidepanel.hpp  window.hpp
source/world/: entity.hpp  myworld.hpp  organism.hpp  random.cpp  random.hpp  selector.hpp  spawn.hpp  spawner.hpp  world.hpp
src/: app.rs  lib.rs
src/core/: mod.rs
